--- a/app/src/main/java/view/ProjectDialogScreen.form
+++ b/app/src/main/java/view/ProjectDialogScreen.form
@@ -86,7 +86,7 @@
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Project"/>
+            <Property name="text" type="java.lang.String" value="PROJECT"/>
           </Properties>
         </Component>
       </SubComponents>
