--- a/app/src/main/java/view/ProjectDialogScreenUpdate.form
+++ b/app/src/main/java/view/ProjectDialogScreenUpdate.form
@@ -202,6 +202,9 @@
               <Image iconType="3" name="/salve.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Update"/>
+            <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+              <Color id="Default Cursor"/>
+            </Property>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabelProjectUpdateMouseClicked"/>
