--- a/app/src/main/java/view/DeleteTaskDialogScreen.form
+++ b/app/src/main/java/view/DeleteTaskDialogScreen.form
@@ -127,7 +127,7 @@
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Task"/>
+            <Property name="text" type="java.lang.String" value="TASK"/>
           </Properties>
         </Component>
       </SubComponents>
